Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
Our infrastructure migration is complete. Please remember to update your SSH remote to point to ssh.gitlab.freedesktop.org; SSH to the old hostname will time out. You should not see any problems apart from that. Please let us know if you do have any other issues.
commit a378158d35b994e2ded0287dfe2770b8345b573c (HEAD, upstream/master)Author: Chris Wilson <chris@chris-wilson.co.uk>Date: Sat Feb 29 11:17:16 2020 +0000 i915/gem_exec_balancer: Bump priority of background load for hang detection If we ensure that the background load has elevated priority, it will kick off the preempt-timeout hang detection, ensuring that our hang detection is fast. Closes: https://gitlab.freedesktop.org/drm/intel/issues/1277 Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk> Acked-by: Mika Kuoppala <mika.kuoppala@linux.intel.com>
commit 8e9f84cf5cac248a1c6a5daa4942879c8b765058 (HEAD -> drm-intel-next-queued, drm-intel/for-linux-next, drm-intel/drm-intel-next-queued)Author: Chris Wilson <chris@chris-wilson.co.uk>Date: Wed Mar 4 12:18:49 2020 +0000 drm/i915/gt: Propagate change in error status to children on unhold As we release the head requests back into the queue, propagate any change in error status that may have occurred while the requests were temporarily suspended. Closes: https://gitlab.freedesktop.org/drm/intel/issues/1277 Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk> Cc: Tvrtko Ursulin <tvrtko.ursulin@intel.com> Reviewed-by: Mika Kuoppala <mika.kuoppala@linux.intel.com> Link: https://patchwork.freedesktop.org/patch/msgid/20200304121849.2448028-2-chris@chris-wilson.co.uk
We are detecting the hang before we queue the continuation, changing the semantics of the test.
commit 9a94fb4b5ebb82185fb52a1709366458597a62ab (HEAD, upstream/master)Author: Chris Wilson <chris@chris-wilson.co.uk>Date: Thu Apr 30 11:58:11 2020 +0100 i915/gem_exec_balancer: Queue all hangs together Just in case we detect the invalid CS before we are all setup in the test to check for the expected results, use a fence to submit all the hanging spinners together. Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/1277 Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk> Acked-by: Mika Kuoppala <mika.kuoppala@linux.intel.com>